--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.bazaarvoice.commons</groupId>
-        <artifactId>bv-opensource-super-pom</artifactId>
-        <version>1.0</version>
-    </parent>
-
-    <groupId>com.upplication.maven.plugins</groupId>
+    <groupId>com.marvinformatics</groupId>
     <artifactId>s3-download-maven-plugin</artifactId>
     <version>1.0.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
@@ -16,32 +10,23 @@
     <name>S3 download maven plugin</name>
 
     <scm>
-        <url>https://github.com/Upplication/s3-download-maven-plugin</url>
-        <connection>scm:git:git@github.com:Upplication/s3-download-maven-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:Upplication/s3-download-maven-plugin.git</developerConnection>
+        <url>https://github.com/velo/s3-download-maven-plugin</url>
+        <connection>scm:git:git@github.com:velo/s3-download-maven-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:velo/s3-download-maven-plugin.git</developerConnection>
     </scm>
 
     <properties>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <encoding>UTF-8</encoding>
     </properties>
-    
-    <repositories>
-        <repository>
-            <id>snapshots-repo</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <releases><enabled>false</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.2</version>
+                <version>3.8.1</version>
                 <configuration>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
@@ -67,24 +52,26 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.0</version>
+            <version>3.6.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.0</version>
+            <version>3.6.0</version>
+            <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.3.26</version>
-        </dependency>
+      <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-s3</artifactId>
+    <version>1.12.428</version>
+</dependency>
 
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-        </dependency>
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.11.0</version>
+</dependency>
     </dependencies>
 </project>
