--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <groupId>com.marvinformatics</groupId>
   <artifactId>s3-download-maven-plugin</artifactId>
-  <version>0.3</version>
+  <version>0.4-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>S3 download maven plugin</name>
